--- a/port.toml
+++ b/port.toml
@@ -24,6 +24,6 @@ version = "v0.7.0"
 
 [pinst]
 dependencies = ["rust"]
-content = ["https://github.com/ThePerkinrex/pinst/archive/v0.2.0-alpha.tar.gz"]
+content = []
 makefile = "makefiles/pinst.makefile"
-version = "v0.2.0-alpha"
+version = "v0.3.0-alpha"
